--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="../src/componentes/navbar/responsive.js"></script>
     
   </body>
 </html>
